--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="splash_icon">Splash Icon</string>
+    <string name="student_id">Student ID</string>
+    <string name="student_name">Student Name</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="save">Save</string>
+    <string name="back">Back</string>
+    <string name="call">Call</string>
 </resources>
