--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,6 @@
     <string name="app_name">Android Praktikum 11</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="email">E-Mail</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
@@ -19,4 +12,5 @@
     <string name="save">Save</string>
     <string name="back">Back</string>
     <string name="call">Call</string>
+    <string name="change_language">Change Language</string>
 </resources>
